<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/mainbg"
            android:scaleType="center" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp"
                android:src="@mipmap/mapualogo"
                android:transitionName="@string/transition_string" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:text="@string/tv1"
                android:textAlignment="center"
                android:textSize="20sp"
                android:transitionName="@string/transition_string2" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/colorRed" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                android:isScrollContainer="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/et1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/et1"
                        android:inputType="textCapSentences" />

                    <EditText
                        android:id="@+id/et2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/et2"
                        android:inputType="textEmailAddress" />


                    <EditText
                        android:id="@+id/et3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/et3"
                        android:inputType="textPassword" />

                    <EditText
                        android:id="@+id/et4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/et4"
                        android:inputType="textPassword" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="4dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginRight="15dp"
                            android:text="@string/tv3"
                            android:textSize="18sp" />

                        <RadioGroup
                            android:id="@+id/rgsexgender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/rb1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="15dp"
                                android:checked="true"
                                android:text="@string/rb1" />

                            <RadioButton
                                android:id="@+id/rb2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="15dp"
                                android:text="@string/rb2" />

                        </RadioGroup>

                    </LinearLayout>

                    <Button
                        android:id="@+id/b1"
                        android:backgroundTint="@color/colorAccent"
                        android:textColor="@android:color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/b1" />
                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </FrameLayout>

</LinearLayout>