<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".Main2Activity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="center"
            android:src="@mipmap/mainbg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp"
                android:src="@mipmap/mapualogo" />

            <TextView
                android:id="@+id/tv8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:text="@string/tv8"
                android:textAlignment="center"
                android:textSize="20sp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                android:isScrollContainer="false">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="vertical">

                    <TableRow android:layout_marginVertical="5dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingRight="20dp"
                            android:textStyle="bold"
                            android:text="@string/tv9" />

                        <TextView
                            android:id="@+id/tvName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </TableRow>

                    <TableRow android:layout_marginVertical="5dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingRight="20dp"
                            android:textStyle="bold"
                            android:text="@string/tv10" />

                        <TextView
                            android:id="@+id/tvEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </TableRow>

                    <TableRow android:layout_marginVertical="5dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingRight="20dp"
                            android:textStyle="bold"
                            android:text="@string/tv6" />

                        <TextView
                            android:id="@+id/tvBirth"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </TableRow>

                    <TableRow android:layout_marginVertical="5dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingRight="20dp"
                            android:textStyle="bold"
                            android:text="@string/tv3" />

                        <TextView
                            android:id="@+id/tvSexGender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </TableRow>

                    <TableRow android:layout_marginVertical="5dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingRight="20dp"
                            android:textStyle="bold"
                            android:text="@string/tv4" />

                        <TextView
                            android:id="@+id/tvDegree"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </TableRow>

                    <TableRow android:layout_marginVertical="5dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingRight="20dp"
                            android:textStyle="bold"
                            android:text="@string/tv5" />

                        <TextView
                            android:id="@+id/tvLevel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </TableRow>

                    <TableRow android:layout_marginVertical="5dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingRight="20dp"
                            android:textStyle="bold"
                            android:text="@string/tv7" />


                        <TextView
                            android:id="@+id/tvHobbies"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                    </TableRow>

                    <TableRow android:layout_marginVertical="5dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingRight="20dp"
                            android:textStyle="bold"
                            android:text="@string/tv11" />

                        <TextView
                            android:id="@+id/tvPass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </TableRow>
                </TableLayout>
            </ScrollView>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>